@@ -689,6 +689,9 @@ Trunk (unreleased changes)
     CombineFileInputFormat is used as job InputFormat.
     (Amareshwari Sriramadasu via dhruba)
 
+    HADOOP-5635. Change distributed cache to work with other distributed file
+    systems. (Andrew Hitchcock via tomwhite)
+
 Release 0.20.1 - Unreleased
 
   INCOMPATIBLE CHANGES
